@@ -1,3 +1,8 @@
+2011-07-26  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* tests/scripts/checker_perfcorrect.sh: Minor update, fix
+	potential infinite loop in compute_regressions.
+
 2011-07-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* tests/scripts/checker_perfcorrect.sh: Minor update.
